<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal"
    android:weightSum="1">

    <RelativeLayout
        android:id="@+id/activity_mr_potato_head"
        android:layout_width="202dp"
        android:layout_height="215dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.jim.jimboelrijkpset1.MrPotatoHeadActivity"
        android:layout_weight="0.38">

        <ImageView
            android:id="@+id/body"
            android:layout_width="wrap_content"
            android:layout_height="236dp"
            android:layout_gravity="top"
            android:src="@drawable/body"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <ImageView
            android:id="@+id/hat"
            android:layout_width="wrap_content"
            android:layout_height="236dp"
            android:layout_gravity="top"
            android:src="@drawable/hat"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:visibility="invisible"
            />
        <ImageView
            android:id="@+id/ears"
            android:layout_width="wrap_content"
            android:layout_height="236dp"
            android:layout_gravity="top"
            android:src="@drawable/ears"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:visibility="invisible"/>
        <ImageView
            android:id="@+id/glasses"
            android:layout_width="wrap_content"
            android:layout_height="236dp"
            android:layout_gravity="top"
            android:src="@drawable/glasses"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:visibility="invisible"/>
        <ImageView
            android:id="@+id/eyebrows"
            android:layout_width="wrap_content"
            android:layout_height="236dp"
            android:layout_gravity="top"
            android:src="@drawable/eyebrows"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:visibility="invisible"/>

        <ImageView
            android:id="@+id/shoes"
            android:layout_width="wrap_content"
            android:layout_height="236dp"
            android:layout_gravity="top"
            android:src="@drawable/shoes"
            android:visibility="invisible"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />

        <ImageView
            android:id="@+id/mustache"
            android:layout_width="wrap_content"
            android:layout_height="236dp"
            android:layout_gravity="top"
            android:src="@drawable/mustache"
            android:visibility="invisible"
            android:layout_alignTop="@+id/shoes"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:id="@+id/mouth"
            android:layout_width="wrap_content"
            android:layout_height="236dp"
            android:layout_gravity="top"
            android:src="@drawable/mouth"
            android:visibility="invisible"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />

        <ImageView
            android:id="@+id/nose"
            android:layout_width="wrap_content"
            android:layout_height="236dp"
            android:layout_gravity="top"
            android:src="@drawable/nose"
            android:visibility="invisible"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />

        <ImageView
            android:id="@+id/arms"
            android:layout_width="wrap_content"
            android:layout_height="236sp"
            android:layout_gravity="top"
            android:src="@drawable/arms"
            android:visibility="invisible"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/nose"
            android:layout_alignStart="@+id/nose"
            />

        <ImageView
            android:id="@+id/eyes"
            android:layout_width="wrap_content"
            android:layout_height="236dp"
            android:layout_gravity="top"
            android:src="@drawable/eyes"
            android:visibility="invisible"
            android:layout_alignTop="@+id/mustache"
            android:layout_alignLeft="@+id/shoes"
            android:layout_alignStart="@+id/shoes" />
    </RelativeLayout>


    <GridLayout
        android:id="@+id/gridview"
        android:layout_width="195dp"
        android:layout_height="190dp"
        android:layout_gravity="center"
        android:columnWidth="90dp"
        android:numColumns="auto_fit"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:stretchMode="columnWidth"
        >
        <CheckBox
            android:text="@string/hat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:id="@+id/checkBox_Hat"
            android:onClick="set_view_visible"
            />
        <CheckBox
            android:text="@string/ears"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:id="@+id/checkBox_Ears"
            android:onClick="set_view_visible"
            />
        <CheckBox
            android:text="@string/glasses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:id="@+id/checkBox_Glasses"
            android:onClick="set_view_visible"
            />
        <CheckBox
            android:text="@string/eyes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:id="@+id/checkBox_Eyes"
            android:onClick="set_view_visible"
            />
        <CheckBox
            android:text="@string/arms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="4"
            android:id="@+id/checkBox_Arms"
            android:onClick="set_view_visible"
            />
        <CheckBox
            android:text="@string/nose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:id="@+id/checkBox_Nose"
            android:onClick="set_view_visible"
            />
        <CheckBox
            android:text="@string/mustache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:id="@+id/checkBox_Mustache"
            android:onClick="set_view_visible"/>

        <CheckBox
            android:text="@string/mouth"
            android:layout_column="1"
            android:layout_row="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox_Mouth"
            android:onClick="set_view_visible"/>
        <CheckBox
            android:text="@string/shoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:id="@+id/checkBox_Shoes"
            android:onClick="set_view_visible"/>
        <CheckBox
            android:text="@string/eyebrows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="4"
            android:id="@+id/checkBox_Eyebrows"
            android:onClick="set_view_visible"/>
    </GridLayout>
</LinearLayout>